
	* Wikipedia のダンプデータ (abstract) を処理する。

2010-11-06: remove-deadlinks.sh
	* 壊れているシンボリックリンクを削除する。

2010-10-25: newprj-adobe-air.py [deleted]
	* Adobe AIR SDK のプロジェクトを生成する。

2010-10-23: use-jinja2.py,jinja2-example.j2,jinja2-example.txt

	* `jinja2` で if 文と for 文を使ってみる。

2010-10-16: load-mysql-connection-info.py [deleted]

	* `MySQLdb` の接続情報を JSON から取得する。

2010-10-15: toggle-contents.html
	* JavaScript でタイトルをクリックすると本文が開閉する処理を実装してみる。

2010-10-14: simple-usage-nose-test.py [deleted]

	* use `nose` for simple test.

2010-10-11: socket-client.c
	* ソケット通信用のクライアントを実装してみる。

2010-10-09: cause-memory-leak-pthread.c
	* スレッドに join しないことでメモリリークを発生させる。
		use pthread and raise memory leak not to call `pthread_join`

2010-10-08: twitlet.js [deleted]

	* Web ページのタイトルと URL を Twitter にポストするブックマークレット。

2010-10-04: simple-usage-gdbm-key-value.c
	* `gdbm` を使って簡単な key/value を使う。

2010-09-29: simple-usage-tornado.py
	* Tornado を使って JSON でデータを返す。

2010-08-31: simple-usage-twisted-process.py
	* Twisted の spawnProcess を使ってみる。

2010-08-19: simple-usage-mysqldb.py [deleted]

	* `MySQLdb` を使ってみる。

2010-07-20: color-console-with-curses.cpp
	* コンソールに色を付ける。(requires curses.h)

2010-07-13: newprj-html5widget.sh [deleted]

	* HTML5 Widget 用のプロジェクトを作る。

2010-07-05: simple-usage-sqlite.sh [deleted]

	* SQLite を使ってみる。

2010-07-03: ant-xml2html.xml [deleted]

	* Ant の xslt タスクで XML を HTML に変換する。

2010-07-01: simple-usage-twisted-web.py
	* HTTPServer の代わりに twisted.web を使う。

2010-06-29: simple-usage-jsonp.html [deleted]

	* HTTPServer を使って JSONP でデータを送る。

2010-06-28: simple-usage-sqlite.php [deleted]

	* SQLite を使ってみる。

2010-06-27: try-webworkers-worker.js,try-webworkers.html

	* Web Workers を触ってみる。

2010-06-25: simple-usage-zope-interface.py [deleted]

	* `zope.interface` モジュールを使う。

2010-06-25: loop-test.py [deleted]

	* ループ処理を計測する。

2010-06-19: try-inspect.py

	* `inspect` モジュールを使う。

2010-06-18: newprj-autotools.sh [deleted]

	* autotools でプロジェクトを作成する。
