@@ -1,33 +1,0 @@
-{% extends "layout.html.j2" %}
-{% block title %}expand / collapse items{% endblock %}
-{% block content %}
-<div class="item">
-  <h3>Item 1</h3>
-  <div><p>lorem ipsum</p></div>
-</div>
-<div class="item">
-  <h3>Item 2</h3>
-  <div><p>いろはにほへと</p></div>
-</div>
-<div class="item">
-  <h3>Item 3</h3>
-  <div><p>JavaScript</p></div>
-</div>
-{% endblock %}
-{% block script %}
-(function(items) {
-    for (var i = 0, size = items.length; i < size; i++) {
-        (function(item) {
-            var title = item.getElementsByTagName("h3")[0],
-                content = item.getElementsByTagName("div")[0];
-            title.addEventListener("click", function(ev) {
-                if (content.style.display == "none")
-                    content.style.display = "block";
-                else
-                    content.style.display = "none";
-            }, false);
-            content.style.display = "none";
-        }(items[i]))
-    }
-}(document.querySelectorAll(".item")));
-{% endblock %}
